# perch_tasks

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  toolbar-harness.html  toolbar-width.html  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md
.github/prompts/: final-touch-review.prompt.md  plan-and-implement.prompt.md
.github/workflows/: pr-validation.yml  publish-release-assets.yml  release-after-merge.yml
browser-tests/: toolbar-width.spec.ts
docs/: IMPLEMENTATION_PLAN.md  PRD.md
scripts/: bump-version-from-pr.mjs  generate-icons.ps1  release-automation.mjs  release-automation.test.mjs  start-release.ps1  tauri-build.ps1  tauri-cli.mjs  tauri-dev.ps1
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.svelte  SearchBar.svelte  Settings.svelte  TitleBar.svelte  TodoInput.svelte  TodoItem.svelte  TodoTree.svelte  Toolbar.svelte
src/lib/: appInfo.ts  autostart.ts  constants.ts  foldout.ts  labels.ts  persistence.ts  search.ts  state.svelte.ts  theme.ts  tray.ts  tree.ts  types.ts
src/test-harness/: toolbar-width.ts
src/tests/: app.test.ts  constants.test.ts  foldout.test.ts  labels.test.ts  persistence.test.ts  search.test.ts  settings.test.ts  state.test.ts  todo-ui.test.ts  toolbar.test.ts  tree.test.ts
src/tests/browser/: ToolbarHarness.svelte  toolbar-harness.ts  toolbar.spec.ts
